# pyproject.toml
# This file is for packaging `culvert-toolkit` for distribution as a package and for use in ArcGIS Pro.
# References:
# * https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#

[build-system]
requires = ["setuptools>=61.0"] #,"setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "culvert-toolkit"
version = "0.2.2"
authors = [
    {name = "CivicMapper", email = "info@civicmapper.com"},
    {name = "Christian Gass", email = "christian.gass@civicmapper.com"}
]
description = "A geospatial data-powered TR-55 model for modeling culvert capacity"
readme  =  "README.md"
keywords = ["ArcGIS Pro 3.0", "GIS", "spatial", "modeling", "analysis", "stormwater", "culverts", "watershed", "basin", "TR-55", "peak flow"] 
license = {text = "Apache 2.0"}
requires-python = ">=3.9, <4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Private :: Do Not Upload"
]
dependencies = [
    "codetiming",
    "pint",
    "click",
    "tqdm",
    "requests",
    "petl",
    "marshmallow",
    "marshmallow-dataclass[union]",
]

[project.urls]
"Homepage" = "https://github.com/civicmapper/culvert-toolkit"
"Bug Tracker" = "https://github.com/civicmapper/culvert-toolkit/issues"

# [tool.setuptools]
# package-dir = [{.="src"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drainit = ["esri/toolboxes/*",  "esri/arcpy/*", "esri/help/gp/*",  "esri/help/gp/toolboxes/*", "esri/help/gp/messages/*"]